[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/title_base/title_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/button_base/button_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/title_title/title_title.gd" type="Script" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/icons/icon_discord.svg" type="Texture" id=8]
[ext_resource path="res://assets/music/voice_blacken_slash.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/music/title.mp3" type="AudioStream" id=15]
[ext_resource path="res://components/new_game/new_game.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/font/RubikItalicSmall.tres" type="DynamicFont" id=19]

[node name="Title" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Build" type="Label" parent="Text" index="1"]
visible = false
modulate = Color( 1, 0.0862745, 0.564706, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 95.0
margin_right = 168.0
margin_bottom = 125.0
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 100, 15 )
theme = ExtResource( 6 )
text = "BETA BRANCH"
align = 2
uppercase = true

[node name="UI" parent="." index="1"]
margin_top = -320.0
theme = ExtResource( 6 )

[node name="Welcome" type="MarginContainer" parent="UI" index="0"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="UI/Welcome" index="0"]
margin_left = 30.0
margin_right = 670.0
margin_bottom = 300.0
rect_min_size = Vector2( 640, 0 )
size_flags_horizontal = 4
custom_constants/separation = 20
alignment = 1

[node name="Headline" type="Label" parent="UI/Welcome/Container" index="0"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 7.0
margin_right = 640.0
margin_bottom = 36.0
text = "Welcome!"
align = 1
autowrap = true

[node name="Text" type="Label" parent="UI/Welcome/Container" index="1"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 56.0
margin_right = 640.0
margin_bottom = 213.0
text = "T_SOLO_INTRO"
align = 1
autowrap = true

[node name="Container" type="HBoxContainer" parent="UI/Welcome/Container" index="2"]
margin_top = 233.0
margin_right = 640.0
margin_bottom = 293.0
custom_constants/separation = 16

[node name="Discord" parent="UI/Welcome/Container/Container" index="0" instance=ExtResource( 2 )]
margin_right = 60.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 46.7635, 57.5 )
hint_tooltip = "Discord"
icon = ExtResource( 8 )

[node name="HideWelcome" parent="UI/Welcome/Container/Container" index="1" instance=ExtResource( 2 )]
margin_left = 76.0
margin_right = 640.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "T_CONTINUE"

[node name="Menu" type="MarginContainer" parent="UI" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -358.0
margin_right = 350.0
custom_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="UI/Menu" index="0"]
margin_left = 110.0
margin_right = 590.0
margin_bottom = 338.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 4
custom_constants/separation = 10
alignment = 2

[node name="Normal" parent="UI/Menu/Container" index="0" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 28.0
margin_right = 480.0
margin_bottom = 108.0
rect_min_size = Vector2( 60, 80 )
focus_next = NodePath("../Ladder")

[node name="V" type="VBoxContainer" parent="UI/Menu/Container/Normal" index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Type" type="Label" parent="UI/Menu/Container/Normal/V" index="0"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 13.0
margin_right = 480.0
margin_bottom = 42.0
text = "T_NORMAL"
align = 1

[node name="Info" type="Label" parent="UI/Menu/Container/Normal/V" index="1"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 42.0
margin_right = 480.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
custom_constants/line_spacing = -4
custom_fonts/font = ExtResource( 19 )
text = "T_NORMAL_DESCRIPTION"
align = 1
autowrap = true

[node name="Ladder" parent="UI/Menu/Container" index="1" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 118.0
margin_right = 480.0
margin_bottom = 198.0
rect_min_size = Vector2( 60, 80 )
rect_pivot_offset = Vector2( 46.7635, 57.5 )
focus_previous = NodePath("../Normal")

[node name="V" type="VBoxContainer" parent="UI/Menu/Container/Ladder" index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Type" type="Label" parent="UI/Menu/Container/Ladder/V" index="0"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_top = 13.0
margin_right = 480.0
margin_bottom = 42.0
text = "T_LADDER"
align = 1

[node name="Info" type="Label" parent="UI/Menu/Container/Ladder/V" index="1"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_top = 42.0
margin_right = 480.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
custom_constants/line_spacing = -4
custom_fonts/font = ExtResource( 19 )
text = "T_LADDER_DESCRIPTION"
align = 1
autowrap = true

[node name="Menu" parent="UI/Menu/Container" index="2" instance=ExtResource( 2 )]
margin_top = 208.0
margin_right = 480.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 46.7635, 57.5 )
text = "T_MENU"

[node name="Quit" parent="UI/Menu/Container" index="3" instance=ExtResource( 2 )]
margin_top = 278.0
margin_right = 480.0
margin_bottom = 338.0
size_flags_horizontal = 3
text = "T_QUIT"

[node name="NewGame" parent="." index="3" instance=ExtResource( 18 )]
visible = false

[node name="Timer" type="Timer" parent="." index="4"]

[node name="Title" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 15 )
bus = "Music"

[node name="Voice" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 14 )
bus = "SFX"

[connection signal="button_down" from="UI/Welcome/Container/Container/Discord" to="." method="_on_Discord_button_down"]
[connection signal="button_down" from="UI/Welcome/Container/Container/HideWelcome" to="." method="_on_HideWelcome_button_down"]
[connection signal="button_down" from="UI/Menu/Container/Normal" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="UI/Menu/Container/Ladder" to="." method="_on_Ladder_button_down"]
[connection signal="pressed" from="UI/Menu/Container/Menu" to="." method="_show_menu"]
[connection signal="pressed" from="UI/Menu/Container/Quit" to="." method="_quit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Title" to="." method="_on_ident_finished"]
